# cmake-boilerplate

./: .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  clang-profile.ini  conanfile.py  conanfile.txt  meson.build  meson_options.txt  readme.md
.github/workflows/: test.yml
cmake/: HardenCxxDefinitions.cmake  HardenCxxFlags.cmake  HardenCxxOptions.cmake
meson/HardenCxxFlags/: meson.build
src/: CMakeLists.txt  bench-codepoints.cpp  codepoints-boost-regex.cpp  codepoints.cpp  icu-normalize.cpp  meson.build  random.cpp
tests/: meson.build  random.cpp
